Login page complete

--- a/index.html
+++ b/index.html
@@ -6,18 +6,23 @@
     <title>Notes</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@100&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="pages">
-        <div class="page">
-            <div class="auth-page-wrapper">
-                <div class="auth-elements">
+        <div>
+            <div class="auth-flexbox">
+                <div class="auth-grid">
+                    <h2 id="title">Notes</h2>
                     <input class="input-elem" id="username" type="text" placeholder="Username">
                     <input class="input-elem" id="password" type="password" placeholder="Password">
                     <button id="register" class="btn-elem">Register</button>
                     <button id="login" class="btn-elem">Login</button>
                 </div>
             </div>
+            <hr>
         </div>
         <div class="page">2</div>
         <div class="page">3</div>
