--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="pages">
-        <div>
+        <div style="display: none;"> <!-- Auth page -->
             <div class="auth-flexbox">
                 <div class="auth-grid">
                     <h2 id="title">Notes</h2>
@@ -24,11 +24,30 @@
             </div>
             <hr>
         </div>
-        <div class="page">2</div>
-        <div class="page">3</div>
-        <div class="page">4</div>
-        <div class="page">5</div>
-        <div class="page">6</div>
+        <div> <!-- Main page -->
+            <div class="main-grid">
+                <div class="left-nav">
+                    <button>Menu</button>
+                    <h2>Notes</h2>
+                </div>
+                <div class="right-nav">
+                    <button>Logout</button>
+                </div>
+                <div class="notes-list">
+                    <div class="note-item">
+                        <h4>Random thoughts #1</h4>
+                        <p>How about I make a progr...</p>
+                    </div>
+                    <div class="note-item">
+                        <h4>Random thoughts #2</h4>
+                        <p>How about I make a progr...</p>
+                    </div>
+                </div>
+                <div class="note-content">
+                    <textarea id="note-textbox">The content of the select note will go here.</textarea>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
