--- a/index.html
+++ b/index.html
@@ -26,12 +26,18 @@
         </div>
         <div> <!-- Main page -->
             <div class="main-grid">
-                <div class="left-nav">
-                    <button>Menu</button>
-                    <h2>Notes</h2>
-                </div>
-                <div class="right-nav">
-                    <button>Logout</button>
+                <div class="nav-bar">
+                    <svg class="list-icon" viewBox="0 0 24 24" width="3rem" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                        <path d="M9 6l11 0"></path>
+                        <path d="M9 12l11 0"></path>
+                        <path d="M9 18l11 0"></path>
+                        <path d="M5 6l0 .01"></path>
+                        <path d="M5 12l0 .01"></path>
+                        <path d="M5 18l0 .01"></path>
+                    </svg>
+                    <h2 id="logo">Notes</h2>
+                    <button id="logout">Logout</button>
                 </div>
                 <div class="notes-list">
                     <div class="note-item">
@@ -43,7 +49,11 @@
                         <p>How about I make a progr...</p>
                     </div>
                 </div>
-                <div class="note-content">
+                <div class="note-viewbox">
+                    <div class="note-bar">
+                        <h2>Title of the note</h2>
+                        <button>Edit</button>
+                    </div>
                     <textarea id="note-textbox">The content of the select note will go here.</textarea>
                 </div>
             </div>
