--- a/main.html
+++ b/main.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <meta charset='utf-8'>
-    <title>Page Title</title>
+    <title>Notes</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
 </head>
-<body onload="onBodyLoad()">
+<body onload="setup()">
     <div class="main-grid">
 
         <header class="header">
@@ -31,7 +31,7 @@
 
         <ul class="notes-list" id="notes-list">
             <button class="button" style="width: auto; margin: 0.5rem 0.5rem 0rem;" onclick="createNote()">Create</button>
-            <li class="note-item">
+            <li class="note-item" onclick="selectNote(this)">
                 <svg class="note-icon" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                     <path d="M5 3m0 2a2 2 0 0 1 2 -2h10a2 2 0 0 1 2 2v14a2 2 0 0 1 -2 2h-10a2 2 0 0 1 -2 -2z"></path>
@@ -42,7 +42,7 @@
                 <h4 class="left-padding">Random thoughts #1</h4>
                 <p class="left-padding">How about I make a progr...</p>
             </li>
-            <li class="note-item selected-note">
+            <li class="note-item" onclick="selectNote(this)">
                 <svg class="note-icon" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                     <path d="M5 3m0 2a2 2 0 0 1 2 -2h10a2 2 0 0 1 2 2v14a2 2 0 0 1 -2 2h-10a2 2 0 0 1 -2 -2z"></path>
@@ -60,8 +60,8 @@
                 <input readonly class="note-title" id="note-title" placeholder="Title"/>
                 <div class="controls">
                     <button class="button" id="save-btn">Save</button>
-                    <button class="button" id="cancel-btn">Cancel</button>
-                    <button class="button" hidden id="edit-btn">Edit</button>
+                    <button class="button" onclick="cancel()" id="cancel-btn">Cancel</button>
+                    <button class="button" hidden onclick="editNote()" id="edit-btn">Edit</button>
                     <button class="button" hidden id="delete-btn">Delete</button>
                 </div>
             </header>
