changed file structure

--- a/auth.html
+++ b/auth.html
@@ -5,8 +5,8 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Auth</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='auth.css'>
-    <script src='auth.js'></script>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/auth.css'>
+    <script src='js/auth.js'></script>
 </head>
 <body>
     <div class="container">
