--- a/app.html
+++ b/app.html
@@ -4,8 +4,8 @@
     <meta charset='utf-8'>
     <title>Notes</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/main.css'>
-    <script src='js/main.js'></script>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/app.css'>
+    <script src='js/app.js'></script>
 </head>
 <body onload="setup()">
     <div class="main-grid">
