Basic functionality done

--- a/app.html
+++ b/app.html
@@ -40,7 +40,7 @@
                     <button class="button" onclick="saveNote()" id="save-btn">Save</button>
                     <button class="button" onclick="cancel()" id="cancel-btn">Cancel</button>
                     <button class="button" hidden onclick="editNote()" id="edit-btn">Edit</button>
-                    <button class="button" hidden id="delete-btn">Delete</button>
+                    <button class="button" hidden onclick="deleteNote()" id="delete-btn">Delete</button>
                 </div>
             </header>
             <textarea readonly class="note-textarea border" id="note-textarea" spellcheck="false" placeholder="Text"></textarea>
